add delete attr
